--- a/popup.html
+++ b/popup.html
@@ -19,7 +19,7 @@
   </div>
   <div class="content"></div>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="libs/jquery.min.js"></script>
   <script src="popup.js"></script>
 </body>
 
